Subida de imagenes

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,9 @@
 
 <body>
 
+    <!-- <img src="http://localhost:3000/imagen/productos/6012980013c16119dca04e5e-124.jpg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c3VhcmlvIjp7InJvbGUiOiJVU0VSX1JPTEUiLCJlc3RhZG8iOnRydWUsImdvb2dsZSI6ZmFsc2UsIl9pZCI6IjYwMGVhNTgwNzJhYzQ3MjE1OGMzZTJiYiIsIm5vbWJyZSI6InRlc3QxIiwiZW1haWwiOiJ0ZXN0MUBnbWFpbC5jb20iLCJfX3YiOjB9LCJpYXQiOjE2MTE4Mjg0ODMsImV4cCI6MTYxMjAwMTI4M30.LRMvSDfmReMbl3KrcvBU1O6itcHKOOmZyV3Jwe_PS-8"
+        alt=""> -->
+
     <div class="g-signin2" data-onsuccess="onSignIn"></div>
 
     <script>
